//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Order {
  id String [pk]
  title String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  Courier Courier
  courierId String
  orderUnits OrderUnit [not null]
  Status Status
  statusId String
}

Table Courier {
  id String [pk]
  name String [not null]
  order Order [not null]
}

Table OrderUnit {
  id String [pk]
  title String [not null]
  amount Int [not null]
  Order Order
  orderId String
  FoodSpot FoodSpot
  foodSpotId String
}

Table FoodSpot {
  id String [pk]
  title String [not null]
  orderUnits OrderUnit [not null]
}

Table Status {
  id String [pk]
  StatName String [not null]
  orders Order [not null]
}

Table Authorization {
  id String [pk]
  login String [unique, not null]
  password String [not null]
}

Ref: Order.courierId > Courier.id

Ref: Order.statusId > Status.id

Ref: OrderUnit.orderId > Order.id

Ref: OrderUnit.foodSpotId > FoodSpot.id